@@ -1,3 +1,13 @@
+2010-03-04  Pablo de la Concepción <pablo.concepcion@artica.es>
+
+	* godmode/gis_maps/configure_gis_map.php: Change help link.
+
+	* godmode/gis_maps/index.php: Added help link.
+
+	* include/help/en/help_gis_map_builder.php,
+	  include/help/en/help_configure_gis_map.php: first version of the help
+	pages.
+
 2010-03-04  Miguel de Dios  <miguel.dedios@artica.es>
 
 	* include/functions_gis.php: in function "printMap2" disable by default
